feat: switch dashboard to API, remove in-memory-web-api

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <h2>Top Heroes</h2>
+
 <div class="heroes-menu">
-  <a *ngFor="let hero of heroes"
+  <a *ngFor="let hero of topHeroes()"
       routerLink="/detail/{{hero.id}}">
       {{hero.name}}
   </a>
